# backend/routes/api.php
@@ -5,12 +5,12 @@ use App\Http\Controllers\Api\AuthController;
 use Illuminate\Support\Facades\Route;
 
 // Public routes
-Route::post('/login', [AuthController::class, 'login']);
+Route::post('/auth/login', [AuthController::class, 'login']);
 
 // Protected routes
 Route::middleware('auth:sanctum')->group(function () {
     // User / Auth
-    Route::post('/logout', [AuthController::class, 'logout']);
+    Route::delete('/auth/logout', [AuthController::class, 'logout']);
     Route::get('/users/current', [AuthController::class, 'current']);
 
     // Attendances
